--- a/src/webparts/helloWorld/components/Styles.css
+++ b/src/webparts/helloWorld/components/Styles.css
@@ -5,7 +5,7 @@
 }
 
 .btn {
-  margin: 20px;
+  /* margin: 20px; */
   background-color: brown;
   color: #ede4e4;
   border: none;
@@ -25,16 +25,16 @@
 }
 
 .card {
-  background-color: rgb(229, 233, 229);
+  background-color: rgb(224, 225, 226);
   border-radius: 10px;
   padding: 10px;
-
+  width: 100%;
   list-style: none;
 }
 .subcard {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
   flex-direction: column;
   justify-content: space-between;
   background-color: rgb(255, 255, 255);
